--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -96,4 +96,19 @@
         justify-content: space-between;
         /*Espacio entre cada una de las columnas*/
     }
+
+    /*Menu vertical para tablets*/
+    .menu__container {
+        left: 0;
+        height: auto;
+        width: 74px;
+        top: 80px;
+    }
+
+    .menu__lista {
+        flex-direction: column;
+        justify-content: flex-start;
+        padding-top: 15px;
+        gap: 33px;
+    }
 }
