--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -74,11 +74,38 @@
 }
 
 /*Seccion videos*/
-.videos__item{
+.videos__item {
     /*Configuracion de tamaño de los videos*/
     height: 303px;
     width: 280px;
 }
+
+/* DESAFIO DESCRIPCIÓN DE LOS VIDEOS */
+
+.descripcion-video {
+    margin-top: 1rem;
+    display: flex;
+    align-items: start;
+
+}
+
+.descripcion-video img {
+    margin-right: 1rem;
+    flex-shrink: 0;
+    /*  Evita que la imagen se reduzca */
+
+}
+
+.detalles__video {
+    flex-direction: column;
+    text-align: left;
+
+}
+
+.detalles__video h3 {
+    margin-bottom: 10px;
+}
+
 
 .rodapie__container {
     display: flex;
